minor styling cleanup. character select image stretching fix. center 'press start' button

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,8 @@ popGreen {
   text-align: center; }
 
 #playerSetup {
-  position: fixed;
   height: 500px;
+  margin: 0 auto;
   top: 60px; }
 
 #pressStart {
@@ -77,8 +77,7 @@ popGreen {
   height: 50px; }
 
 #startFooter {
-  position: absolute;
-  bottom: 10%; }
+  margin: 0 auto; }
 
 #attackBtn {
   padding: 0;
@@ -92,7 +91,9 @@ popGreen {
 #chooseCharacter {
   padding: 0;
   background-color: black;
-  height: 100%; }
+  height: 100%;
+  max-height: 500px;
+  max-width: 600px; }
 
 .buttonHover:hover {
   outline: 3px solid yellow; }
